# supabase-js-rs

./: .gitignore  Cargo.toml  index.html  leptosfmt.toml  package-lock.json  package.json
src/: components.rs  lib.rs  main.rs
src/pages/: mod.rs  signin.rs  signup.rs
src/sb/: client.rs  mod.rs
src/state/: mod.rs  types.rs
src/state/global/: global.rs  session.rs
style/: leptos-bulma.scss
supabase/: config.toml
