[package]
name = "app_52024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
leptos-bulma = { version = "0.2.0", features = ["build-script"] }
dotenv = "0.15.0"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
leptos-use = "0.10.10"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
supabase-js-rs = { git = "https://github.com/remymiguk/supabase-js-rs.git" }
